# easy-ha-satellite

./: .env  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  asoudrc.example  docker-compose.yml  pyproject.toml  requirements.txt  todo.md
pipewire.conf.d.bak/: 89-speaker.conf  90-microphone.conf  91-stereo-to-mono.conf  92-roc-sender.conf  93-roc-receiver.conf  94-loopback.conf
src/: main.py
src/easy_ha_satellite/: __main__.py  microphone_producer.py  voice_pipeline_consumer.py  wake_word_consumer.py  wake_word_worker.py
src/easy_ha_satellite/assets/config/: audio.yaml  config.yaml  logging.yaml
src/easy_ha_satellite/audio_io/: __init__.py  alerts.py  audio_capture.py  audio_playback.py  schemas.py
src/easy_ha_satellite/audio_io/audio_processing/: utils.py
src/easy_ha_satellite/config/: __init__.py  config.py  schemas.py
src/easy_ha_satellite/home_assistant/: __init__.py  http_client.py  pipeline.py  schemas.py  websocket_client.py
src/easy_ha_satellite/wake_word/: __init__.py  schemas.py  wake_word.py
