[project]
name = "easy-ha-satellite"
version = "0.1.0"
description = "A plug-and-play satellite for Home Assistant using Docker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sounddevice~=0.5.2",
    "pydub~=0.25.1",
    "pyaudio~=0.2.14",
    "openwakeword~=0.6.0",
    "numpy~=1.26.4",
    "simpleaudio~=1.0.4",
    "wavio~=0.0.9",
    "websockets~=15.0.1",
    "soundfile~=0.13.1",
    "uvloop~=0.21.0",
    "aiohttp~=3.12.14",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[dependency-groups]
dev = [
    "ruff==0.11.11",
]
