[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[project]
name = "easy-ha-satellite"
dynamic = ["version"]
description = "A plug-and-play satellite for Home Assistant using Docker"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Dave Bennett"}]
license = { text = "MIT" }
urls = { "Source" = "https://github.com/davebben/easy-ha-satellite" }
classifiers = [
  "Programming Language :: Python :: 3.11"
]

dependencies = [
  "sounddevice>=0.5.2,<0.6",
  "openwakeword>=0.6,<0.7",
  "numpy>=1.26,<2",
  "websockets>=15,<16",
  "uvloop>=0.21,<0.22",
  "aiohttp>=3.12,<4",
  "soundfile>=0.13,<1",
  "pydantic>=2.11,<3",
  "pyyaml>=6.0.2,<7",
  "pydub>=0.25,<0.26",
  "platformdirs>=4.3.8",
  "webrtc-noise-gain>=1.2.5",
]

[project.scripts]
easy-ha-sat = "easy_ha_satellite.__main__:main"

[dependency-groups]
dev = [
  "ruff>=0.12.5,<0.13",
  "pytest>=8",
  "nox>=2024.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/easy_ha_satellite"]
include = [
  "src/easy_ha_satellite/assets/sounds/**/*",
  "src/easy_ha_satellite/assets/config/**/*",
]
only-packages = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E4","E7","E9","F","I","UP","C4","B","SIM","PLE","PERF","NPY"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
